--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,15 @@ CHANGES
 
 .. towncrier release notes start
 
+2.2.0-dev (2023-06-01)
+------------------
+
+Changes
++++++++
+
+- Use configuration file: config.yml
+- Log messages to syslog
+
 2.1.0 (2023-04-04)
 ------------------
 
